--- a/app/src/main/res/layout/activity_cocineros.xml
+++ b/app/src/main/res/layout/activity_cocineros.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.juanp.restaurante.Cocineros">
+
 
 </LinearLayout>
